--- a/ermolaev.ia/task2/task2.vcxproj.filters
+++ b/ermolaev.ia/task2/task2.vcxproj.filters
@@ -10,4 +10,9 @@
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\..\..\source\repos\Kol_nya\Kol_nya\KAKASHKA.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
