--- a/ermolaev.ia/task1/task1.vcxproj
+++ b/ermolaev.ia/task1/task1.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\source\repos\Ebola1\Ebola1\LolKekCheburek.cpp" />
+    <ClCompile Include="LolKekCheburek.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
