░░░░░▄▀▀▀▄▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▌ ▄███▀░◐░░░▌░ЗАПУСКАЕМ░ГУСЯ-ФУРУ░░░ ████▌░░░░░▐▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▌ ▀(@)▀▀▀▀▀▀▀(@)(@)▀▀▀▀▀▀▀▀▀▀▀▀▀(@)▀

--- a/ermolaev.ia/task2/task2.vcxproj.filters
+++ b/ermolaev.ia/task2/task2.vcxproj.filters
@@ -11,7 +11,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="PsevdoKakashka.cpp">
+    <ClCompile Include="PsevdoGadalka.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
