--- a/ermolaev.ia/task2/task2.vcxproj
+++ b/ermolaev.ia/task2/task2.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="PsevdoKakashka.cpp" />
+    <ClCompile Include="PsevdoGadalka.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
