--- a/ermolaev.ia/task3/task3.vcxproj
+++ b/ermolaev.ia/task3/task3.vcxproj
@@ -111,6 +111,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Roga_i_kopyta.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
