--- a/ermolaev.ia/task3/task3.vcxproj.filters
+++ b/ermolaev.ia/task3/task3.vcxproj.filters
@@ -10,4 +10,9 @@
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Roga_i_kopyta.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
